--- a/templates/articles_edit.html
+++ b/templates/articles_edit.html
@@ -1,7 +1,7 @@
 {% extends 'flatpages/default.html' %}
 
 {% block content %}
-<h1>Пост</h1>
+<h1>Создайте статью</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
