--- a/templates/posts.html
+++ b/templates/posts.html
@@ -15,13 +15,13 @@ Posts
    <h1>Всего постов:</h1>
 
    {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
-<!--   <form action="" method="get">-->
-<!--       {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}-->
-<!--       {{ filterset.form.as_p }}-->
-<!--       {# Добавим кнопку отправки данных формы #}-->
-<!--&lt;!&ndash;       <input type="time_in" value="2025-02-12" />&ndash;&gt;-->
-<!--       <input type="submit" value="Найти" />-->
-<!--   </form>-->
+   <form action="" method="get">
+       {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
+       {{ filterset.form.as_p }}
+       {# Добавим кнопку отправки данных формы #}
+<!--       <input type="time_in" value="2025-02-12" />-->
+       <input type="submit" value="Найти" />
+   </form>
 
    <hr>
 
