--- a/templates/news_edit.html
+++ b/templates/news_edit.html
@@ -10,7 +10,7 @@
     </form>
 
 
-<h1>Создайте новость</h1>
+<h1>Создайте или измените пост</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
