--- a/templates/news_search.html
+++ b/templates/news_search.html
@@ -7,48 +7,44 @@
 
 
 {% block title %}
-Posts
+    Новости
 {% endblock title %}
-
-
-
 
 {% block content %}
 
-<!--<button> <a href="sign/upgrade/">Стать автором</a> </button>-->
+        {% if is_not_authors %}
+        <button> <a href="sign/upgrade/">Стать автором</a> </button>
+        {% endif %}
 
-   <h1>Поиск новостей:</h1>
-
-
+   <h1>Список новостей:</h1>
+    <hr>
+    {% if news_search %}
 
     <form action="" method="get">
-       {{ filterset.form.as_p }}
+       {{ filter.form.as_p  }}
        <input type="submit" value="Найти" />
    </form>
-
-   <hr>
-
-   {% if news_search %}
        <table>
            <tr>
                <td><h4>Заголовок</h4></td>
-               <td><h4>Дата публикации</h4></td>
+               <td><h4>Категории</h4></td>
                <td><h4>Текст</h4></td>
-
-
-
-
-           </tr>
-
+               <td><h4>Дата публикации</h4></td>
+              </tr>
            {% for post in news_search %}
-
-
-           <tr>
-               <td>{{ post.title }}</td>
-
-               <td>{{ post.time_in|date:'d M Y'}}</td>
+              <tr>
+                  <td>
+                       <a href="{% url 'post_detail' post.id %}">{{ post.title | censor }}</a>
+                       <a href="{% url 'news_update' post.id %}"><u>Редактировать</u></a>
+                       <a href="{% url 'news_delete' post.id %}"><u>Удалить</u></a>
+                  </td>
+                   <td>
+                       {% for category in post.category.all %}
+                           <a href="{% url 'category_list' category.id %}">{{ category }}</a>
+                       {% endfor %}
+                   </td>
                <td>{{ post.text|censor|truncatechars:20 }}</td>
-
+               <td>{{ post.time_in|date:'d M Y'}}</td>
 
            </tr>
 
@@ -61,8 +57,9 @@ Posts
    {% endif %}
 
    {% if page_obj.has_previous %}
-       {# Для каждой ссылки пагинации указываем обработку через новый тег #}
+
        <a href="?{% url_replace page=1 %}">1</a>
+
        {% if page_obj.previous_page_number != 1 %}
            ...
            <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
@@ -78,9 +75,7 @@ Posts
            <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
        {% endif %}
    {% endif %}
-    {% if is_not_authors %}
-    <button> <a href="sign/upgrade/">Стать автором</a> </button>
-    {% endif %}
+
 
 
 {% endblock content %}
