sending_emails_modified

--- a/templates/news/category_list.html
+++ b/templates/news/category_list.html
@@ -13,7 +13,7 @@
     {% endif %}
 
     {% if is_not_authors %}
-        <button> <a href="sign/upgrade/">Стать автором</a> </button>
+        <button><a href="{% url 'upgrade' %}">Стать автором</a> </button>
     {% endif %}
 
     <h1>Поиск новостей:</h1>
