--- a/templates/news_search.html
+++ b/templates/news_search.html
@@ -12,9 +12,9 @@
 
 {% block content %}
 
-        {% if is_not_authors %}
-        <button> <a href="sign/upgrade/">Стать автором</a> </button>
-        {% endif %}
+    {% if is_not_authors %}
+        <button><a href="{% url 'upgrade' %}">Стать автором</a> </button>
+    {% endif %}
 
    <h1>Список новостей:</h1>
     <hr>
