--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,44 +1,93 @@
+
 <!DOCTYPE html>
+    {% load i18n %}
+    {% load tz %}
+{% load static %}
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Bare - Start Bootstrap Template</title>
+<!--        <meta charset="utf-8" />-->
+<!--        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />-->
+<!--        <meta name="description" content="" />-->
+<!--        <meta name="author" content="" />-->
+        <title>The universe is infinite...</title>
         <!-- Favicon-->
-        {% load static %}
+
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+
+
+    <style>
+        body {background-color: {% if current_time.hour >= 15 or current_time.hour <= 6 %} darkcyan {% else %} powderblue {% endif %};}
+    </style>
+
     </head>
     <body>
+<!--    <div class="container">-->
+
+    <form action="{% url 'set_language' %}" method="POST"> {% csrf_token %} <!-- Не забываем по csrf_token для POST-запросов -->
+        <input type="hidden" name="next" value="{{ redirect_to }}">
+        <select name="language" id="">
+
+<!--            {% get_available_languages as LANGUAGES %} &lt;!&ndash; получаем языки &ndash;&gt;-->
+<!--            {% get_language_info_list for LANGUAGES as languages %} &lt;!&ndash; Помещаем их в список languages &ndash;&gt;-->
+
+            {% for language in languages %} <!-- Итерируясь по списку, выводим их название на языке пользователя и код -->
+                <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                    {{ language.name_local }} - {{ language.code }}
+                </option>
+            {% endfor %}
+        </select>
+        <input type="submit" value="set">
+    </form>
+
+    {% get_current_timezone as TIME_ZONE %}
+    <form action="{% url 'time_zone' %}" method="POST">
+        {% csrf_token %}
+        <label for="timezone">Time zone:</label>
+        <select name="timezone" style="...">
+            {% for tz in timezones %}
+            <option value="{{ tz }}"{% if tz == TIME_ZONE %} selected {% endif %}>{{ tz }}</option>
+            {% endfor %}
+        </select>
+        <input type="submit" value="set" id="timezone">
+    </form>
+
+<!--    {{ TIME_ZONE }}-->
+    {{ current_time|timezone:TIME_ZONE }} <!-- Отображаем время в выбранном часовом поясе  -->
+
+<!--    {% for model in models %}-->
+<!--    <div class="model-class">-->
+<!--        {{ model.name }}-->
+<!--    </div>-->
+<!--    {% endfor %}-->
+
         <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-   <div class="container">
-       <a class="navbar-brand" href="#">Django flatpages</a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse"
-               data-target="#navbarResponsive"
-               aria-controls="navbarResponsive" aria-expanded="false"
-               aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse" id="navbarResponsive">
-           <ul class="navbar-nav ml-auto">
-               <li class="nav-item active">
-                   <a class="nav-link" href="#">Home
-                       <span class="sr-only">(current)</span>
-                   </a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" href="/about/">About</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" href="/contacts/">Contact</a>
-               </li>
-           </ul>
-       </div>
-   </div>
-</nav>
+<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">-->
+<!--   <div class="container">-->
+<!--       <a class="navbar-brand" href="#">Django flatpages</a>-->
+<!--       <button class="navbar-toggler" type="button" data-toggle="collapse"-->
+<!--               data-target="#navbarResponsive"-->
+<!--               aria-controls="navbarResponsive" aria-expanded="false"-->
+<!--               aria-label="Toggle navigation">-->
+<!--           <span class="navbar-toggler-icon"></span>-->
+<!--       </button>-->
+<!--       <div class="collapse navbar-collapse" id="navbarResponsive">-->
+<!--           <ul class="navbar-nav ml-auto">-->
+<!--               <li class="nav-item active">-->
+<!--                   <a class="nav-link" href="#">Home-->
+<!--                       <span class="sr-only">(current)</span>-->
+<!--                   </a>-->
+<!--               </li>-->
+<!--               <li class="nav-item">-->
+<!--                   <a class="nav-link" href="/about/">About</a>-->
+<!--               </li>-->
+<!--               <li class="nav-item">-->
+<!--                   <a class="nav-link" href="/contacts/">Contact</a>-->
+<!--               </li>-->
+<!--           </ul>-->
+<!--       </div>-->
+<!--   </div>-->
+<!--</nav>-->
         <!-- Page content-->
         <div class="container">
            <div class="row">
