--- a/templates/main.html
+++ b/templates/main.html
@@ -1,11 +1,12 @@
-
+{% load i18n %}
+{{ string }}
 <html>
     <head>
-        <title> Simple SignUp/SignIn app</title>
+        <title>Simple SignUp/SignIn app</title>
     </head>
     <body>
         <div>
-            <h1><a href="/">Simple SignUp/SignIn app</a></h1>
+            <h1><a href="/">{% trans 'Simple SignUp/SignIn app' %}</a></h1>
         </div>
         {% block content %}
         {% endblock %}
