--- a/templates/post_delete.html
+++ b/templates/post_delete.html
@@ -1,11 +1,13 @@
 {% extends 'flatpages/default.html' %}
+{% load i18n %}
+{{ string }}
 
 {% block content %}
-<h1>Удаление товара</h1>
+<h1>{% trans "Удаление публикации" %}</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
-    <p>Удалить "{{ object.title }}" ?</p>
-    <input type="submit" value="Delete" />
+    <p>{% trans "Удалить" %} "{{ object.title }}" ?</p>
+    <input type="submit" value="{% trans 'Delete' %}" />
 </form>
 {% endblock content %}
