--- a/templates/posts.html
+++ b/templates/posts.html
@@ -2,8 +2,8 @@
 {% extends 'flatpages/default.html' %}
 
 {% load custom_tags %}
-{% load custom_filter %}
-{% load replace_filter %}
+<!--{% load custom_filter %}-->
+<!--{% load replace_filter %}-->
 
 
 {% block title %}
@@ -17,7 +17,7 @@ Posts
    {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
    <form action="" method="get">
        {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
-       {{ filterset.form.as_p }}
+       {{ filter.form.as_p }}
        {# Добавим кнопку отправки данных формы #}
 <!--       <input type="time_in" value="2025-02-12" />-->
        <input type="submit" value="Найти" />
@@ -25,7 +25,7 @@ Posts
 
    <hr>
 
-   {% if posts %}
+   {% if news_search %}
        <table>
            <tr>
                <td><h4>Название</h4></td>
@@ -36,7 +36,7 @@ Posts
 
            </tr>
 
-           {% for post in posts %}
+           {% for post in news_search %}
            <tr>
                <td>{{ post.title }}</td>
                <td>{{ post.time_in|date:'d M Y'}}</td>
